--- a/apache/log.conf
+++ b/apache/log.conf
@@ -1,6 +1,6 @@
 ServerName apache
 HostnameLookups Off
-#BufferedLogs On
+BufferedLogs On
 ErrorLog syslog
 EnableSendFile On
 CustomLog "|/usr/bin/logger --tag apache" "%t %R %V %m %U %q %s %D %B \"%{X-Forwarded-For}i\" \"%{cache-status}e\"" env=!no-log
