removed directory slashes

--- a/apache/default.conf
+++ b/apache/default.conf
@@ -44,7 +44,7 @@
     <Location />
         DirectoryIndex disabled
         DirectoryIndex index.php
-        DirectorySlash on
+        # DirectorySlash on
         Options -Indexes
 
         # For .php 
