added manual directory slashes to support AWS API Gateway

--- a/apache/default.conf
+++ b/apache/default.conf
@@ -44,7 +44,8 @@
     <Location />
         DirectoryIndex disabled
         DirectoryIndex index.php
-        # DirectorySlash on
+        DirectorySlash off
+        DirectoryIndexRedirect off
         Options -Indexes
 
         # For .php 
@@ -65,6 +66,15 @@
         RewriteCond %{REQUEST_URI} =/status-fpm [OR]
         RewriteCond %{REQUEST_URI} =/status-apache
         RewriteRule / - [E=no-cache,E=no-log,E=no-cookie,L]
+
+
+        # If this has come from AWS API Gateway, it doesn't proxy 
+        # trailing slashes, so add one. This conflicts with
+        # `DirectorySlash on` so we've turned that off too.
+        RewriteCond %{REQUEST_FILENAME} -d
+        RewriteCond %{REQUEST_URI} !/$
+        RewriteRule / %{REQUEST_URI}/ [L]
+
 
         # If we get to here then there's no real file and it's not PHP
         RewriteCond %{REQUEST_FILENAME} !-f
@@ -112,6 +122,7 @@
     
     # Output some interesting performance stats.
     Header always set X-Performance "%D %t %l %i %b"
+    Header set X-Request-URI 'expr=%{REQUEST_URI}'
 
     SetEnvIf Request_URI "^/(favicon.ico|robots.txt|sitemap.xml)$" no-log
 </VirtualHost>
